# oz-main-be-12-team2

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  Dockerfile  README.md  check_email.py  docker-compose.yml  main.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  test.sh
.github/workflows/: checks.yml  deploy.yml
apps/admins/: apps.py
apps/carts/: apps.py  models.py  serializers.py  signals.py  test_carts.py  tests.py  urls.py  views.py
apps/carts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cartproduct_cart_alter_cartproduct_product.py  0004_alter_cart_user.py
apps/core/: pagination.py
apps/orders/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  serializers.py  test_orders.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  0002_product_alter_order_status_alter_order_user_and_more.py  0003_cart_cartitem.py  0003_remove_orderitem_created_at.py  0004_alter_order_total_price.py  0004_delete_product_remove_orderitem_product_name_and_more.py  0004_remove_orderitem_product_name_orderitem_product.py  0005_alter_order_status.py  0005_remove_cartitem_cart_remove_cartitem_product_and_more.py
apps/payments/: admin_urls.py  admin_views.py  filters.py  models.py  serializers.py  test_payments.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_payment_transaction_id.py
apps/payments/mock_payment/: payment.py
apps/payments/urls/: admin_urls.py  user_urls.py
apps/payments/views/: admin_views.py  user_views.py
apps/products/: admin.py  admin_urls.py  admin_views.py  apps.py  filters.py  forms.py  models.py  pagination.py  serializers.py  signals.py  stats_views.py  test_product.py  test_products.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_remove_product_image_url_product_image_and_more.py  0003_alter_product_image.py  0004_alter_product_image.py  0005_alter_product_category.py
apps/stats/: serializers.py  services.py  test_stats.py  urls.py  views.py
apps/stats/views/: admin_dashboard_view.py  admin_dashboard_views.py  product_ranking_view.py
apps/support/: admin_urls.py  admin_views.py  gemini_service.py  models.py  serializers.py  urls.py  views.py
apps/support/migrations/: 0001_initial.py  0002_alter_inquiryreply_author.py  0003_alter_inquiry_title.py
apps/support/tests/: test_admin_views.py  test_gemini_service.py  test_views.py
apps/users/: adapters.py  admin.py  admin_urls.py  admin_views.py  middleware.py  models.py  serializers.py  social_utils.py  social_views.py  test_user.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_id.py  0004_alter_user_id.py  0005_alter_user_id.py  0006_alter_user_id.py
apps/users/tests/: test_email.py  test_social_utils.py  test_social_views.py  test_token.py  test_user.py
apps/utils/: models.py
config/: settings.py  urls.py
locust_tests/: locustfile.py
resources/: nginx.conf
resources/scripts/: run.sh  test.sh
scripts/: run.sh  test.sh
(+2 files in other folders)
